sprite newton adicionado

--- a/movimentacao/makefile
+++ b/movimentacao/makefile
@@ -1,2 +1,2 @@
 movimentacao: *.cpp
-	g++	./src/*.cpp	main.cpp	-o	movimentacao.exe	-w	-lSDL2	-lSDL2_image
+	g++	./src/*.cpp	main.cpp	-o	movimentacao.exe	-w	-lmingw32	-lSDL2main	-lSDL2	-lSDL2_image
